crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@layers_8.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "layers_8",
    "statements": [
      {
        "stmt": "layers",
        "count": 8,
        "span": {
          "byte_start": 21,
          "byte_end": 29
        }
      }
    ],
    "span": {
      "byte_start": 0,
      "byte_end": 31
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 31
  }
}
