crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@layers_min.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "layers_min",
    "statements": [
      {
        "stmt": "layers",
        "count": 1,
        "span": {
          "byte_start": 23,
          "byte_end": 31
        }
      }
    ],
    "span": {
      "byte_start": 0,
      "byte_end": 33
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 33
  }
}
