crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@sensor_logger.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "sensor_logger",
    "statements": [
      {
        "stmt": "layers",
        "count": 4,
        "span": {
          "byte_start": 158,
          "byte_end": 166
        }
      },
      {
        "stmt": "manufacturer",
        "name": "jlcpcb",
        "span": {
          "byte_start": 169,
          "byte_end": 190
        }
      },
      {
        "stmt": "component",
        "refdes": "U1",
        "kind": "mcu",
        "part": "stm32f103c8",
        "span": {
          "byte_start": 217,
          "byte_end": 248
        }
      },
      {
        "stmt": "component",
        "refdes": "U2",
        "kind": "sensor",
        "part": "bme680_env",
        "span": {
          "byte_start": 251,
          "byte_end": 284
        }
      },
      {
        "stmt": "component",
        "refdes": "U3",
        "kind": "regulator",
        "part": "ams1117_3v3",
        "span": {
          "byte_start": 287,
          "byte_end": 324
        }
      },
      {
        "stmt": "component",
        "refdes": "J1",
        "kind": "connector",
        "part": "micro_usb_b",
        "span": {
          "byte_start": 344,
          "byte_end": 381
        }
      },
      {
        "stmt": "component",
        "refdes": "R1",
        "kind": "resistor",
        "part": "r_generic_0603",
        "value": "4.7k",
        "span": {
          "byte_start": 400,
          "byte_end": 452
        }
      },
      {
        "stmt": "component",
        "refdes": "R2",
        "kind": "resistor",
        "part": "r_generic_0603",
        "value": "4.7k",
        "span": {
          "byte_start": 455,
          "byte_end": 507
        }
      },
      {
        "stmt": "component",
        "refdes": "R3",
        "kind": "resistor",
        "part": "r_generic_0603",
        "value": "10k",
        "span": {
          "byte_start": 510,
          "byte_end": 561
        }
      },
      {
        "stmt": "component",
        "refdes": "C1",
        "kind": "capacitor",
        "part": "c_generic_0603",
        "value": "10uF",
        "span": {
          "byte_start": 592,
          "byte_end": 645
        }
      },
      {
        "stmt": "component",
        "refdes": "C2",
        "kind": "capacitor",
        "part": "c_generic_0603",
        "value": "10uF",
        "span": {
          "byte_start": 648,
          "byte_end": 701
        }
      },
      {
        "stmt": "component",
        "refdes": "C3",
        "kind": "capacitor",
        "part": "c_generic_0603",
        "value": "100nF",
        "placement_hint": {
          "attrs": [
            {
              "Near": [
                "U1",
                {
                  "byte_start": 784,
                  "byte_end": 788
                }
              ]
            },
            {
              "Priority": [
                "hard",
                {
                  "byte_start": 799,
                  "byte_end": 803
                }
              ]
            }
          ],
          "span": {
            "byte_start": 761,
            "byte_end": 805
          }
        },
        "span": {
          "byte_start": 704,
          "byte_end": 807
        }
      },
      {
        "stmt": "component",
        "refdes": "C4",
        "kind": "capacitor",
        "part": "c_generic_0603",
        "value": "100nF",
        "span": {
          "byte_start": 810,
          "byte_end": 864
        }
      },
      {
        "stmt": "component",
        "refdes": "C5",
        "kind": "capacitor",
        "part": "c_generic_0603",
        "value": "100nF",
        "span": {
          "byte_start": 867,
          "byte_end": 921
        }
      },
      {
        "stmt": "component",
        "refdes": "C6",
        "kind": "capacitor",
        "part": "c_generic_0603",
        "value": "100nF",
        "placement_hint": {
          "attrs": [
            {
              "Near": [
                "U1",
                {
                  "byte_start": 1004,
                  "byte_end": 1008
                }
              ]
            },
            {
              "Priority": [
                "hard",
                {
                  "byte_start": 1019,
                  "byte_end": 1023
                }
              ]
            }
          ],
          "span": {
            "byte_start": 981,
            "byte_end": 1025
          }
        },
        "span": {
          "byte_start": 924,
          "byte_end": 1027
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "J1",
          "pin": "vbus",
          "span": {
            "byte_start": 1063,
            "byte_end": 1070
          }
        },
        "to": {
          "component": "U3",
          "pin": "vin",
          "span": {
            "byte_start": 1074,
            "byte_end": 1080
          }
        },
        "span": {
          "byte_start": 1055,
          "byte_end": 1080
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "J1",
          "pin": "gnd",
          "span": {
            "byte_start": 1091,
            "byte_end": 1097
          }
        },
        "to": {
          "component": "U3",
          "pin": "gnd",
          "span": {
            "byte_start": 1101,
            "byte_end": 1107
          }
        },
        "span": {
          "byte_start": 1083,
          "byte_end": 1107
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "vout",
          "span": {
            "byte_start": 1119,
            "byte_end": 1126
          }
        },
        "to": {
          "component": "U1",
          "pin": "vdd",
          "span": {
            "byte_start": 1130,
            "byte_end": 1136
          }
        },
        "span": {
          "byte_start": 1111,
          "byte_end": 1136
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "vout",
          "span": {
            "byte_start": 1147,
            "byte_end": 1154
          }
        },
        "to": {
          "component": "U1",
          "pin": "vbat",
          "span": {
            "byte_start": 1158,
            "byte_end": 1165
          }
        },
        "span": {
          "byte_start": 1139,
          "byte_end": 1165
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "vout",
          "span": {
            "byte_start": 1176,
            "byte_end": 1183
          }
        },
        "to": {
          "component": "U2",
          "pin": "vdd",
          "span": {
            "byte_start": 1187,
            "byte_end": 1193
          }
        },
        "span": {
          "byte_start": 1168,
          "byte_end": 1193
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "gnd",
          "span": {
            "byte_start": 1205,
            "byte_end": 1211
          }
        },
        "to": {
          "component": "U1",
          "pin": "vss",
          "span": {
            "byte_start": 1215,
            "byte_end": 1221
          }
        },
        "span": {
          "byte_start": 1197,
          "byte_end": 1221
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "gnd",
          "span": {
            "byte_start": 1232,
            "byte_end": 1238
          }
        },
        "to": {
          "component": "U2",
          "pin": "gnd",
          "span": {
            "byte_start": 1242,
            "byte_end": 1248
          }
        },
        "span": {
          "byte_start": 1224,
          "byte_end": 1248
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "pb7",
          "span": {
            "byte_start": 1328,
            "byte_end": 1334
          }
        },
        "to": {
          "component": "U2",
          "pin": "sda",
          "span": {
            "byte_start": 1338,
            "byte_end": 1344
          }
        },
        "span": {
          "byte_start": 1320,
          "byte_end": 1344
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "pb6",
          "span": {
            "byte_start": 1355,
            "byte_end": 1361
          }
        },
        "to": {
          "component": "U2",
          "pin": "scl",
          "span": {
            "byte_start": 1365,
            "byte_end": 1371
          }
        },
        "span": {
          "byte_start": 1347,
          "byte_end": 1371
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "pb7",
          "span": {
            "byte_start": 1383,
            "byte_end": 1389
          }
        },
        "to": {
          "component": "R1",
          "pin": "p1",
          "span": {
            "byte_start": 1393,
            "byte_end": 1398
          }
        },
        "span": {
          "byte_start": 1375,
          "byte_end": 1398
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "vout",
          "span": {
            "byte_start": 1409,
            "byte_end": 1416
          }
        },
        "to": {
          "component": "R1",
          "pin": "p2",
          "span": {
            "byte_start": 1420,
            "byte_end": 1425
          }
        },
        "span": {
          "byte_start": 1401,
          "byte_end": 1425
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "pb6",
          "span": {
            "byte_start": 1437,
            "byte_end": 1443
          }
        },
        "to": {
          "component": "R2",
          "pin": "p1",
          "span": {
            "byte_start": 1447,
            "byte_end": 1452
          }
        },
        "span": {
          "byte_start": 1429,
          "byte_end": 1452
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "vout",
          "span": {
            "byte_start": 1463,
            "byte_end": 1470
          }
        },
        "to": {
          "component": "R2",
          "pin": "p2",
          "span": {
            "byte_start": 1474,
            "byte_end": 1479
          }
        },
        "span": {
          "byte_start": 1455,
          "byte_end": 1479
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "nrst",
          "span": {
            "byte_start": 1510,
            "byte_end": 1517
          }
        },
        "to": {
          "component": "R3",
          "pin": "p1",
          "span": {
            "byte_start": 1521,
            "byte_end": 1526
          }
        },
        "span": {
          "byte_start": 1502,
          "byte_end": 1526
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "vout",
          "span": {
            "byte_start": 1537,
            "byte_end": 1544
          }
        },
        "to": {
          "component": "R3",
          "pin": "p2",
          "span": {
            "byte_start": 1548,
            "byte_end": 1553
          }
        },
        "span": {
          "byte_start": 1529,
          "byte_end": 1553
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "vin",
          "span": {
            "byte_start": 1668,
            "byte_end": 1674
          }
        },
        "to": {
          "component": "C1",
          "pin": "p1",
          "span": {
            "byte_start": 1678,
            "byte_end": 1683
          }
        },
        "span": {
          "byte_start": 1660,
          "byte_end": 1683
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "gnd",
          "span": {
            "byte_start": 1694,
            "byte_end": 1700
          }
        },
        "to": {
          "component": "C1",
          "pin": "p2",
          "span": {
            "byte_start": 1704,
            "byte_end": 1709
          }
        },
        "span": {
          "byte_start": 1686,
          "byte_end": 1709
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "vout",
          "span": {
            "byte_start": 1721,
            "byte_end": 1728
          }
        },
        "to": {
          "component": "C2",
          "pin": "p1",
          "span": {
            "byte_start": 1732,
            "byte_end": 1737
          }
        },
        "span": {
          "byte_start": 1713,
          "byte_end": 1737
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "gnd",
          "span": {
            "byte_start": 1748,
            "byte_end": 1754
          }
        },
        "to": {
          "component": "C2",
          "pin": "p2",
          "span": {
            "byte_start": 1758,
            "byte_end": 1763
          }
        },
        "span": {
          "byte_start": 1740,
          "byte_end": 1763
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "vin",
          "span": {
            "byte_start": 1775,
            "byte_end": 1781
          }
        },
        "to": {
          "component": "C5",
          "pin": "p1",
          "span": {
            "byte_start": 1785,
            "byte_end": 1790
          }
        },
        "span": {
          "byte_start": 1767,
          "byte_end": 1790
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U3",
          "pin": "gnd",
          "span": {
            "byte_start": 1801,
            "byte_end": 1807
          }
        },
        "to": {
          "component": "C5",
          "pin": "p2",
          "span": {
            "byte_start": 1811,
            "byte_end": 1816
          }
        },
        "span": {
          "byte_start": 1793,
          "byte_end": 1816
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "vdd",
          "span": {
            "byte_start": 1828,
            "byte_end": 1834
          }
        },
        "to": {
          "component": "C6",
          "pin": "p1",
          "span": {
            "byte_start": 1838,
            "byte_end": 1843
          }
        },
        "span": {
          "byte_start": 1820,
          "byte_end": 1843
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "vss",
          "span": {
            "byte_start": 1854,
            "byte_end": 1860
          }
        },
        "to": {
          "component": "C6",
          "pin": "p2",
          "span": {
            "byte_start": 1864,
            "byte_end": 1869
          }
        },
        "span": {
          "byte_start": 1846,
          "byte_end": 1869
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "vdd",
          "span": {
            "byte_start": 1881,
            "byte_end": 1887
          }
        },
        "to": {
          "component": "C3",
          "pin": "p1",
          "span": {
            "byte_start": 1891,
            "byte_end": 1896
          }
        },
        "span": {
          "byte_start": 1873,
          "byte_end": 1896
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "vss",
          "span": {
            "byte_start": 1907,
            "byte_end": 1913
          }
        },
        "to": {
          "component": "C3",
          "pin": "p2",
          "span": {
            "byte_start": 1917,
            "byte_end": 1922
          }
        },
        "span": {
          "byte_start": 1899,
          "byte_end": 1922
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U2",
          "pin": "vdd",
          "span": {
            "byte_start": 1934,
            "byte_end": 1940
          }
        },
        "to": {
          "component": "C4",
          "pin": "p1",
          "span": {
            "byte_start": 1944,
            "byte_end": 1949
          }
        },
        "span": {
          "byte_start": 1926,
          "byte_end": 1949
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U2",
          "pin": "gnd",
          "span": {
            "byte_start": 1960,
            "byte_end": 1966
          }
        },
        "to": {
          "component": "C4",
          "pin": "p2",
          "span": {
            "byte_start": 1970,
            "byte_end": 1975
          }
        },
        "span": {
          "byte_start": 1952,
          "byte_end": 1975
        }
      }
    ],
    "span": {
      "byte_start": 132,
      "byte_end": 1977
    }
  },
  "span": {
    "byte_start": 132,
    "byte_end": 1977
  }
}
